tests/positive/aurora_control_flow.ax
module aurora_control_flow;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var sum: i32 = 0;
    var i: i32 = 0;
    while i < 5 {
        sum = sum + i;
        i = i + 1;
        if i == 3 {
            i = i + 1;
        }
    }
    if sum == 7 {
        return 0;
    }
    return 1;
}
