tests/negative/non_call_expr_stmt.ax
module non_call_expr_stmt;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    1 + 2;
    return 0;
}
